--- a/form/src/main/resources/static/index.html
+++ b/form/src/main/resources/static/index.html
@@ -10,6 +10,9 @@
         <ul>
             <li><a href="/basic/items">상품 관리 - 기본</a></li>
         </ul>
+        <ul>
+            <li><a href="/basic/v2/items">상품 관리V2</a></li>
+        </ul>
     </li>
 </ul>
 </body>
