--- a/form/src/main/resources/static/index.html
+++ b/form/src/main/resources/static/index.html
@@ -13,6 +13,9 @@
         <ul>
             <li><a href="/basic/v2/items">상품 관리V2</a></li>
         </ul>
+        <ul>
+            <li><a href="/basic/v3/items">상품 관리V3</a></li>
+        </ul>
     </li>
 </ul>
 </body>
