--- a/form/src/main/resources/static/index.html
+++ b/form/src/main/resources/static/index.html
@@ -16,6 +16,9 @@
         <ul>
             <li><a href="/basic/v3/items">상품 관리V3</a></li>
         </ul>
+        <ul>
+            <li><a href="/basic/v4/items">상품 관리V4</a></li>
+        </ul>
     </li>
 </ul>
 </body>
